--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,9 @@
           package="us.rjuhsd.ohs.visite"
           android:versionCode="1"
           android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="10"/>
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
-	<application android:label="@string/app_name">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="true">
 		<activity android:name=".activities.MainActivity"
 		          android:label="@string/app_name"
 		          android:screenOrientation="portrait">
